Merging constructor mocks with safe accessibility whilst fixing use of reflection where new deprecations are better considered.